force-app/main/default/objects/ARF_Deduction__c/ARF_Deduction__c.object-meta.xml
<CustomObject>
    <description>Deduction records from short payments</description>
    <label>AR Deduction</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Deduction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>