force-app/main/default/objects/ARF_Deduction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that took the deduction</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Deductions</relationshipLabel>
    <relationshipName>AR_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>