force-app/main/default/objects/ARF_Deduction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Deduction category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Promotion</fullName><default>false</default><label>Promotion</label></value>
                <value><fullName>Trade Allowance</fullName><default>false</default><label>Trade Allowance</label></value>
                <value><fullName>Co-op Advertising</fullName><default>false</default><label>Co-op Advertising</label></value>
                <value><fullName>Slotting Fee</fullName><default>false</default><label>Slotting Fee</label></value>
                <value><fullName>Volume Rebate</fullName><default>false</default><label>Volume Rebate</label></value>
                <value><fullName>Pricing Error</fullName><default>false</default><label>Pricing Error</label></value>
                <value><fullName>Shortage</fullName><default>false</default><label>Shortage</label></value>
                <value><fullName>Damaged</fullName><default>false</default><label>Damaged</label></value>
                <value><fullName>Freight</fullName><default>false</default><label>Freight</label></value>
                <value><fullName>Returns</fullName><default>false</default><label>Returns</label></value>
                <value><fullName>Compliance</fullName><default>false</default><label>Compliance</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>