force-app/main/default/objects/ARF_Deduction__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <description>Customer claim or reference number</description>
    <label>Customer Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>