force-app/main/default/objects/ARF_Deduction__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment that created the deduction</description>
    <label>Payment</label>
    <referenceTo>ARF_Payment__c</referenceTo>
    <relationshipLabel>Deductions</relationshipLabel>
    <relationshipName>Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>