force-app/main/default/objects/ARF_Deduction__c/fields/Recovery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Amount__c</fullName>
    <description>Amount recovered from invalid deduction</description>
    <label>Recovery Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>