force-app/main/default/objects/ARF_Deduction__c/fields/Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Status__c</fullName>
    <description>Status of recovery effort</description>
    <label>Recovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Not Started</fullName><default>false</default><label>Not Started</label></value>
                <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
                <value><fullName>Recovered</fullName><default>false</default><label>Recovered</label></value>
                <value><fullName>Partially Recovered</fullName><default>false</default><label>Partially Recovered</label></value>
                <value><fullName>Unrecoverable</fullName><default>false</default><label>Unrecoverable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>