force-app/main/default/objects/ARF_Deduction__c/fields/Related_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Related_Dispute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this deduction is linked to a dispute</description>
    <label>Related Dispute</label>
    <referenceTo>ARF_Dispute__c</referenceTo>
    <relationshipLabel>Related_Deductions</relationshipLabel>
    <relationshipName>Related_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>