force-app/main/default/objects/ARF_Deduction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current deduction status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>New</fullName><default>false</default><label>New</label></value>
                <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
                <value><fullName>Valid</fullName><default>false</default><label>Valid</label></value>
                <value><fullName>Invalid</fullName><default>false</default><label>Invalid</label></value>
                <value><fullName>Partially Valid</fullName><default>false</default><label>Partially Valid</label></value>
                <value><fullName>Recovered</fullName><default>false</default><label>Recovered</label></value>
                <value><fullName>Written Off</fullName><default>false</default><label>Written Off</label></value>
                <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>