force-app/main/default/objects/ARF_Deduction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Trade or non-trade classification</description>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Trade</fullName><default>false</default><label>Trade</label></value>
                <value><fullName>Non-Trade</fullName><default>false</default><label>Non-Trade</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>