force-app/main/default/objects/ARF_Deduction__c/fields/Validity_Score__c.field-meta.xml
<CustomField>
    <fullName>Validity_Score__c</fullName>
    <description>AI-predicted validity score 0-100</description>
    <label>Validity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>